--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,8 @@ spring:
     password: postgres
     hikari:
       schema: news
+      connection-init-sql: CREATE SCHEMA IF NOT EXISTS news
+      connection-timeout: 10000
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
